--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,5 @@ instagram_private_api==1.6.0.0
 instagrapi==1.17.3
 Requests==2.28.2
 SQLAlchemy==2.0.9
+google_api_python_client==2.86.0
+yt_dlp==2023.3.4
